--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -24,8 +24,9 @@ sort: 2012
 <li>High-assurance control components based on formal design languages and synthesis</li>
 </ul>
 <p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html"> Resolute</A>).
+</p>
 
-At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.  
+<p>At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.   
 </p>
 
 <p>At the end of phase 2 (July 2015), we conducted a flight test of Boeing's ULB running SMACCM software, including the seL4 microkernel:</p>
@@ -37,5 +38,5 @@ At the end of our first phase, the HACMS Red Team was given six weeks and full a
 <p>A nice overview of Phase 1 of the project from our partners at NICTA:</p>
 <iframe width="360" height="202" src="//www.youtube.com/embed/2tokRPFrKx0" frameborder="0" allowfullscreen></iframe>
 <p>Phase 1 overview form our partners at Galois:</p>
-<iframe width="360" height="202" src="https://www.youtube.com/watch?v=uMB10QCxudY" frameborder="0" allowfullscreen></iframe>
+<iframe width="360" height="202" src="//www.youtube.com/embed/uMB10QCxudY" frameborder="0" allowfullscreen></iframe>
 
