--- a/publications/cofer2014nfm.html
+++ b/publications/cofer2014nfm.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [D. Cofer, S. Miller]
 title: "DO-333 Certification Case Studies"
-info: NASA Formal Methods, 2014
+info: NASA Formal Methods Symposium, 2014
 link: "pdf/cofer2014nfm.pdf"
 date: 2014-04-30 00:00:00
 projects: [DO-333]
