--- a/publications/backes2016nfm.html
+++ b/publications/backes2016nfm.html
@@ -3,7 +3,7 @@ layout: publication
 authors: [J. Backes, M. Whalen, A. Gacek, J. Komp]
 title: "On Implementing Real-time Specification Patterns Using Observers"
 info: NASA Formal Methods Symposium, 2016
-link: "http://arxiv.org/pdf/1604.08155v1"
+link: "http://arxiv.org/pdf/1604.08155"
 projects: [HACMS, CRP]
 tools: [AGREE]
 date: 2016-06-07 00:00:00
