Add date to NFM 2016 papers

--- a/publications/liu2016nfm.html
+++ b/publications/liu2016nfm.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [J. Liu, J. Backes, D. Cofer, A. Gacek]
 title: "From Design Contracts to Component Requirements Verification"
-info: NASA Formal Methods Symposium, 2016
+info: NASA Formal Methods Symposium, June 2016
 link: "https://arxiv.org/pdf/1603.02130"
 projects: [CVFCS]
 date: 2016-06-07 00:00:00
