--- a/publications/backes2016nfm.html
+++ b/publications/backes2016nfm.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [J. Backes, M. Whalen, A. Gacek, J. Komp]
 title: "On Implementing Real-time Specification Patterns Using Observers"
-info: NASA Formal Methods Symposium, 2016
+info: NASA Formal Methods Symposium, June 2016
 link: "http://arxiv.org/pdf/1604.08155"
 projects: [HACMS, CRP]
 tools: [AGREE]
