--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -29,6 +29,8 @@ sort: 2012
 <p>At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.   
 </p>
 
+<p>An overview of the project, with some bits of our Phase 2 demo on the SMACCMcopter:</p>
+<iframe width="360" height="202" src="https://www.youtube.com/embed/DofZ9TickKA" frameborder="0" allowfullscreen></iframe>
 <p>At the end of phase 2 (July 2015), we conducted a flight test of Boeing's ULB running SMACCM software, including the seL4 microkernel:</p>
 <iframe width="360" height="202" src="https://www.youtube.com/embed/OerkxG6L4SM" frameborder="0" allowfullscreen></iframe>
 <p>A brief introduction to the goals of the project:</p>
