--- a/tools/jkind.html
+++ b/tools/jkind.html
@@ -25,17 +25,19 @@ the <a href="https://github.com/lgwagner/SIMPAL">SIMPAL</a> tool.
 JKind is designed to be cross-platform, reliable, and easy to extend,
 with power and performance as secondary goals. JKind is mostly
 compatible with the <a href="http://clc.cs.uiowa.edu/Kind/">KIND</a>
-series of model checkers.
+and <a href="http://kind2-mc.github.io/kind2/">Kind 2</a> model
+checkers.
 </p>
 
 <p>
-JKind requires at least Java 8 and an SMT solver. JKind
-uses <a href="http://yices.csl.sri.com/download-yices1.shtml">Yices
-(version 1)</a> by default and also supports
-<a href="http://cvc4.cs.nyu.edu/web/">CVC4</a>, <a href="http://z3.codeplex.com/">Z3</a>, 
-<a href="http://yices.csl.sri.com/index.shtml">Yices 2</a>,
-and <a href="http://mathsat.fbk.eu/">MathSAT</a>,
-and <a href="http://ultimate.informatik.uni-freiburg.de/smtinterpol/">SMTInterpol</a>.
+JKind requires at least Java 8. JKind
+uses <a href="http://ultimate.informatik.uni-freiburg.de/smtinterpol/">SMTInterpol</a>
+by default (packaged with JKind), but it also supports
+<a href="https://github.com/Z3Prover/z3">Z3</a>, 
+<a href="http://yices.csl.sri.com/old/download-yices1.shtml">Yices 1</a>,
+<a href="http://yices.csl.sri.com/">Yices 2</a>,
+<a href="http://cvc4.cs.nyu.edu/web/">CVC4</a>,
+and <a href="http://mathsat.fbk.eu/">MathSAT</a>.
 </p>
 
 <p>
