Use https for Wikipedia link

--- a/tools/jkind.html
+++ b/tools/jkind.html
@@ -9,7 +9,7 @@ download: "https://github.com/agacek/jkind/releases"
 <p>
 JKind is a tool for verifying safety properties of synchronous
 systems. Systems and their properties are expressed in
-the <a href="http://en.wikipedia.org/wiki/Lustre_(programming_language)">Lustre</a>
+the <a href="https://en.wikipedia.org/wiki/Lustre_(programming_language)">Lustre</a>
 language. Verification is based on k-induction and property directed
 reachability using a back-end SMT solver. A verified property is
 guaranteed to be true for all runs of the system. A falsified property
