--- a/publications/backes2016nfm.html
+++ b/publications/backes2016nfm.html
@@ -4,7 +4,7 @@ authors: [J. Backes, M. Whalen, A. Gacek, J. Komp]
 title: "On Implementing Real-time Specification Patterns Using Observers"
 info: NASA Formal Methods Symposium, June 2016
 link: "http://arxiv.org/pdf/1604.08155"
-projects: [HACMS, CRP]
+projects: [SMACCM, CRP]
 tools: [AGREE]
 date: 2016-06-07 00:00:00
 ---
