Add DOI and year to JAR paper

--- a/publications/pham2016jar.html
+++ b/publications/pham2016jar.html
@@ -2,7 +2,7 @@
 layout: publication
 authors: [T. Pham, A. Gacek, M. Whalen]
 title: "Reasoning about Algebraic Data Types with Abstractions"
-info: "Journal of Automated Reasoning (to appear)"
+info: "Journal of Automated Reasoning (2016). doi:10.1007/s10817-016-9368-2"
 link: "http://arxiv.org/pdf/1603.08769.pdf"
 date: 2016-04-01 00:00:00
 ---
