--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -9,19 +9,34 @@ picture: /images/gacek.jpg
 location: loonwerks
 ---
 
+<p>
 Andrew Gacek is an Industrial Logician at the Rockwell Collins
 Advanced Technology Center.
+</p>
 
-He earned his PhD in Computer Science from the University of
-Minnesota.
-
-He is the principle developer
-of <a href="/tools/jkind.html">JKind</a>, a k-induction
-model checker used in various projects within Rockwell Collins.
-
-He is currently working as part of the air vehicle team in DARPA's
-High Assurance Cyber Military Systems project, focusing high-level
+<p>
+Andrew earned his PhD in Computer Science from the University of
+Minnesota in 2009 and continued his studies as a post-doc INRIA Saclay
+as part of Parsifal group. In 2010, Andrew joined Rockwell Collins. He
+is currently working as part of the air vehicle team in DARPA's High
+Assurance Cyber Military Systems project (HACMS), focusing high-level
 structural and behavioral properties for unmanned air vehicles.
+</p>
 
+<p>
+Andrew has a strong interest in developing tools for the application
+of formal methods. As part of his PhD thesis, Andrew created the
+<a href="http://abella-prover.org/">Abella theorem prover</a>, an
+interactive theorem prover based on lambda-tree syntax. At Rockwell
+Collins, Andrew developed
+<a href="/tools/jkind.html">JKind</a>, an infinite-state model checker
+for safety properties. JKind is used for both various internal and
+external projects at Rockwell Collins. Most recently, Andrew developed
+the <a href="/tools/resolute.html">Resolute</a> language and tool for
+architecturally-structured assurance cases.
+</p>
+
+<p>
 His interests include theorem proving, model checking, language
 translation, and software design.
+</p>
