Switched to past tense.

--- a/projects/fmtq.html
+++ b/projects/fmtq.html
@@ -15,13 +15,13 @@ safety-critical domains. DO-330 qualification of formal methods tools,
 and more generally, the larger question of formal methods tool dependability,
 forms a largely unexplored area of study.</p>
 
-<p>The goal of this NASA-funded project is to investigate the general problem of what
+<p>This NASA-funded project investigated what
 sorts of assurances are necessary and appropriate to justify the application of
 formal methods tools throughout all phases of design in real safety-critical
-settings. We will produce practical examples on how to qualify typical formal 
+settings. We produced practical examples on how to qualify typical formal 
 verification tools in each of the three categories identified in DO-333 (theorem proving, 
-model checking, and abstract interpretation) and explore promising new approaches 
-to the qualification of formal methods tools. We will produce the qualification artifacts for an open source formal
-verification tool, the <A href="http://clc.cs.uiowa.edu/Kind/">Kind model checker</A>. We will also investigate the feasibility of independently verifying tool outputs through the generation of a proof certificate and verification of the certificate with a qualified proof checker.</p>
+model checking, and abstract interpretation) and explored promising new approaches 
+to the qualification of formal methods tools. We produced the qualification artifacts for an open source formal
+verification tool, the <A href="http://clc.cs.uiowa.edu/Kind/">Kind model checker</A>. We also investigated the feasibility of independently verifying tool outputs through the generation of a proof certificate and verification of the certificate with a qualified proof checker.</p>
 
-<p>We are also organizing a <A href="http://www.dagstuhl.de/15182">Dagstuhl Seminar</A> to explore the subject of tool qualification with the formal methods research community.</p>
+<p>As part of the project, we organized a <A href="http://www.dagstuhl.de/15182">Dagstuhl Seminar</A> to explore the subject of tool qualification with the formal methods research community.</p>
