Added link to AMASE repo on github.

--- a/projects/amase.html
+++ b/projects/amase.html
@@ -13,3 +13,5 @@ sort: 2016
 
 <p>Using our AADL-based system architecture modeling and analysis tools as an exemplar, we will extend existing analysis methods to support system safety objectives of ARP4754A and ARP4761.  This will include extensions to existing modeling languages to better describe failure conditions, interactions, and mitigations, and improvements to compositional reasoning approaches focused on the specific needs of system safety analysis.  We will develop example systems based on the Wheel Braking System in SAE AIR6110 and NASA's quad-redundant flight control system (QFCS) to evaluate the effectiveness and practicality of our approach. </p>
 
+Models and code for the project are available on <a href="https://github.com/loonwerks/AMASE">github</a>. 
+
