Added links for Formal Methods Tool Qualification final report.

--- a/projects/fmtq.html
+++ b/projects/fmtq.html
@@ -25,3 +25,6 @@ to the qualification of formal methods tools. We produced the qualification arti
 verification tool, the <A href="http://clc.cs.uiowa.edu/Kind/">Kind model checker</A>. We also investigated the feasibility of independently verifying tool outputs through the generation of a proof certificate and verification of the certificate with a qualified proof checker.</p>
 
 <p>As part of the project, we organized a <A href="http://www.dagstuhl.de/15182">Dagstuhl Seminar</A> to explore the subject of tool qualification with the formal methods research community.</p>
+
+<p>Final results from the project are available as a 
+<a href=https://shemesh.larc.nasa.gov/fm/FMinCert/DO-330-case-studies-RC.html>NASA Contractor Report</a>, along with the case study qualification tests and tools.</p>
