Touch up Wagner 2017 NFM

--- a/publications/wagner2017nfm.html
+++ b/publications/wagner2017nfm.html
@@ -2,9 +2,9 @@
 layout: publication
 authors: [L. Wagner, A. Mebsout, C. Tinelli, D. Cofer, K. Slind]
 title: "Qualification of a Model Checker for Avionics Software Verification"
-info: info: NASA Formal Methods Symposium, May 2017
+info: NASA Formal Methods Symposium, May 2017
 link: "/publications/pdf/wagner2017nfm.pdf"
-date: 2017-02-27 00:00:00
+date: 2017-05-1 00:00:00
 projects: [FMTQ]
 ---
 
