--- a/people/lucas-wagner.html
+++ b/people/lucas-wagner.html
@@ -15,7 +15,7 @@ Center. His principal area of expertise is applying formal analysis techniques, 
 </p>
 
 <p>
-Most recently he led the <a href="/projects/fmtq.html">Formal Methods Tool Project (FMTQ)</a> that investigated issues surrounding the use of formal methods tools within the DO-178C framework. This research fully explored issues regarding the qualification of theorem proving, model checking, and abstract interpretation tools. Further it investigated the concept of using proofs of correctness to enable independent verification of model checking results on the Kind 2 model checking tool.
+Most recently he led the <a href="/projects/fmtq.html">Formal Methods Tool Qualification (FMTQ)</a> project that investigated issues surrounding the use of formal methods tools within the DO-178C framework. This research fully explored issues regarding the qualification of theorem proving, model checking, and abstract interpretation tools. Further it investigated the concept of using proofs of correctness to enable independent verification of model checking results on the Kind 2 model checking tool.
 </p>
 
 <p>
