--- a/people/jennifer-davis.html
+++ b/people/jennifer-davis.html
@@ -10,6 +10,17 @@ location: iowa
 ---
 
 <p>
-Jennifer (Jen) Davis is a Senior Applied Mathematician with Rockwell Collins’ Advanced Technology
-Center. 
+Jennifer (Jen) Davis is a Senior Applied Mathematician in the Advanced Technology Center at Rockwell Collins. 
+Dr. Davis has served as the Rockwell Collins Principal Investigator for multiple U.S. DoD programs in the area of 
+formal methods. She has experience applying the <a href="/tools/spear.html">SpeAR</a> tool to document and analyze the 
+formal requirements for a new architecture. She also has experience using <a href="/tools/agree.html">AGREE</a> to 
+formalize an instantiation of the simplex architecture together with its requirements. 
+</p>
+
+<p>
+Dr. Davis has experience with state of the art theorem proving tools. She jointly developed a translator from LLVM to ACL2 
+to enable verification of system properties. She also used PVS to complete correctness proofs 
+for the <a href="/projects/do333.html">DO-333</a> theorem proving case study.  In addition to Dr. Davis’ formal method 
+skills, she has experience with cryptography, error-correcting codes, image processing, model-based engineering, and 
+cybersecurity. She earned her Ph.D. in Mathematics at the University of Nebraska at Lincoln in 2007.
 </p>
