Add 'past projects' section

--- a/projects/amase.html
+++ b/projects/amase.html
@@ -3,6 +3,7 @@ layout: project
 shortname: AMASE
 longname: Architectural Modeling and Analysis for Safety Engineering
 sort: 2016
+archive: no
 ---
 
 <p>System safety analysis techniques are well-established and are a required activity in the development of commercial aircraft and safety-critical ground systems.  However, these techniques are based on informal system descriptions that are separate from the actual system design artifacts, and are highly dependent on the skill and intuition of a safety analyst.  The lack of precise models of the system architecture and its failure modes often forces safety analysts to devote significant effort to gathering architectural details about the system behavior from multiple sources and embedding this information in safety artifacts, such as fault trees.  </p>
