--- a/projects/cvfcs.html
+++ b/projects/cvfcs.html
@@ -3,6 +3,7 @@ layout: project
 shortname: CVFCS
 longname: Compositional Verification of Flight Critical Systems
 sort: 2013
+archive: yes
 ---
 
 <p>Advanced capabilities planned for the next generation of aircraft and the Next Generation
