--- a/projects/do333.html
+++ b/projects/do333.html
@@ -3,6 +3,7 @@ layout: project
 shortname: DO-333
 longname: Certification Case Studies using Formal Methods
 sort: 2012
+archive: yes
 ---
 
 <p><A href="http://www.rtca.org/store_product.asp?prodid=859">RTCA DO-333, Formal Methods Supplement to DO-178C and DO-278A</A> provides guidance for software developers wishing to use formal methods in the certification of airborne systems and air traffic management systems. The supplement identifies the modifications and additions to DO-178C objectives, activities, and software life cycle data that should be addressed when formal methods are used as part of the software development process. This includes artifacts that would be expressed using some formal notation and the verification evidence that could be derived from them.</p>
