--- a/projects/smaccm.html
+++ b/projects/smaccm.html
@@ -3,6 +3,7 @@ layout: project
 shortname: SMACCM
 longname: Secure Mathematically-Assured Composition of Control Models
 sort: 2012
+archive: no
 ---
 
 <div id="project-logo">
