--- a/projects/fmtq.html
+++ b/projects/fmtq.html
@@ -3,6 +3,7 @@ layout: project
 shortname: FMTQ
 longname: Formal Methods Tool Qualification
 sort: 2015
+archive: no
 ---
 
 <p>Formal methods tools are expected to play a larger role in implementing and
