Change SMACCM to HACMS

--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -1,7 +1,7 @@
 ---
 layout: project
-shortname: SMACCM
-longname: Secure Mathematically-Assured Composition of Control Models
+shortname: HACMS
+longname: High Assurance Cyber Military System
 sort: 2012
 archive: no
 ---
