--- a/publications/cofer2012nfm.html
+++ b/publications/cofer2012nfm.html
@@ -4,7 +4,7 @@ authors: [D. Cofer, A. Gacek, S. Miller, M. Whalen, B. LaValley, L. Sha]
 title: "Compositional verification of architectural models"
 info: NASA Formal Methods, 2012, pp. 126-140
 link: "/publications/pdf/cofer2012nfm.pdf"
-projects: [SMACCM, META]
+projects: [HACMS, META]
 tools: [AGREE]
 date: 2012-01-01 00:00:00
 ---
