--- a/publications/cofer2015itea.html
+++ b/publications/cofer2015itea.html
@@ -5,7 +5,7 @@ title: "Taming the Complexity Beast"
 info: International Test and Evaluation Association (ITEA) Journal, December 2015
 link: "pdf/cofer2015itea.pdf"
 date: 2015-12-01 00:00:00
-projects: [DO-333, SMACCM, CVFCS]
+projects: [DO-333, HACMS, CVFCS]
 ---
 
 Increasing system complexity poses a threat to the continued safety of manned and unmanned aircraft in the NAS.  Testing alone cannot establish strict bounds on all the behaviors that may occur during operation of these software-intensive systems.  New approaches to verification based on logic and mathematical analysis are needed to tame the "complexity beast" and support continued innovation in aircraft systems.
