--- a/publications/gacek2015nfm.html
+++ b/publications/gacek2015nfm.html
@@ -4,7 +4,7 @@ authors: [A. Gacek, A. Katis, M. Whalen, J. Backes, D. Cofer]
 title: "Towards realizability checking of contracts using theories"
 info: NASA Formal Methods, 2015
 link: "/publications/pdf/gacek2015nfm.pdf"
-projects: [SMACCM, CVFCS]
+projects: [HACMS, CVFCS]
 tools: [JKind, AGREE]
 date: 2015-01-01 00:00:00
 ---
