--- a/publications/ghassabani2016fse.html
+++ b/publications/ghassabani2016fse.html
@@ -4,7 +4,7 @@ authors: [E. Ghassabani, A. Gacek, M. Whalen]
 title: "Efficient Generation of Inductive Validity Cores for Safety Properties"
 info: Foundations of Software Engineering, November 2016
 link: "http://arxiv.org/pdf/1603.04276"
-projects: [SMACCM, CVFCS]
+projects: [HACMS, CVFCS]
 tools: [JKind, AGREE]
 date: 2016-11-13 00:00:00
 ---
