--- a/publications/whalen2013ieee.html
+++ b/publications/whalen2013ieee.html
@@ -5,7 +5,7 @@ title: "Your \"what\" is my \"how\": iteration and hierarchy in system design"
 info: "IEEE Software, vol. 30, no. 2, pp. 54-60, March-April 2013, doi:10.1109/MS.2012.173"
 link: "/publications/pdf/whalen2013ieee.pdf"
 date: 2013-04-01 00:00:00
-projects: [SMACCM]
+projects: [HACMS]
 tools: [AGREE]
 ---
 
