--- a/publications/whalen2016ieee.html
+++ b/publications/whalen2016ieee.html
@@ -5,7 +5,7 @@ title: "Requirements and Architectures for Secure Vehicles"
 info: "IEEE Software 33(4):22-25, June 2016, doi:10.1109/MS.2016.94"
 link: "/publications/pdf/whalen2016ieee.pdf"
 date: 2016-06-25 00:00:00
-projects: [SMACCM]
+projects: [HACMS]
 ---
 
 In the High-Assurance Cyber Military Systems project, researchers are
