SMACCM/HACMS terminology in project description.

--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -16,7 +16,7 @@ archive: no
 
 <p>Current approaches to cyber security rely on patching systems after a vulnerability is discovered.  What is needed is a clean-slate, mathematically-based approach for building secure software.  DARPA initiated the <A href="http://www.darpa.mil/program/high-assurance-cyber-military-systems"> HACMS program (High Assurance Cyber Military Systems)</A> to develop the technologies needed to counter cyber threats to network-enabled embedded systems.  </p>
 
-<p>The SMACCM project is developing new tools for building UAV software that is provably secure against many classes of cyber attack.  Our goal is to provide not just security, but verifiable security; that is, system designs for which we can have confidence in and evidence of security.  We are developing system architecture models, software components for mission and control functions, and operating system software, all of which are mathematically analyzed to ensure key security properties.</p>
+<p>Rockwell Collins is leading the Secure Mathematically-Assured Composition of Control Models (SMACCM) project in the DARPA HACMS program. The SMACCM project is developing new tools for building UAV software that is provably secure against many classes of cyber attack.  Our goal is to provide not just security, but verifiable security; that is, system designs for which we can have confidence in and evidence of security.  We are developing system architecture models, software components for mission and control functions, and operating system software, all of which are mathematically analyzed to ensure key security properties.</p>
 
 <p>Unique aspects our approach include: </p>
 <ul>
