--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -16,7 +16,7 @@ Advanced Technology Center.
 
 <p>
 Andrew earned his PhD in Computer Science from the University of
-Minnesota in 2009 and continued his studies as a post-doc INRIA Saclay
+Minnesota in 2009 and continued his studies as a post-doc at INRIA Saclay
 as part of Parsifal group. In 2010, Andrew joined Rockwell Collins. He
 is currently working as part of the air vehicle team in DARPA's High
 Assurance Cyber Military Systems project (HACMS), focusing high-level
