--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -30,7 +30,7 @@ of formal methods. As part of his PhD thesis, Andrew created the
 interactive theorem prover based on lambda-tree syntax. At Rockwell
 Collins, Andrew developed
 <a href="/tools/jkind.html">JKind</a>, an infinite-state model checker
-for safety properties. JKind is used for both various internal and
+for safety properties. JKind is used for various internal and
 external projects at Rockwell Collins. Most recently, Andrew developed
 the <a href="/tools/resolute.html">Resolute</a> language and tool for
 architecturally-structured assurance cases.
