--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -11,32 +11,23 @@ location: minnesota
 
 <p>
 Andrew Gacek is an Industrial Logician at the Rockwell Collins
-Advanced Technology Center.
+Advanced Technology Center. He earned his PhD in Computer Science from
+the University of Minnesota and worked as a post-doc at INRIA Saclay.
+In 2010, he joined Rockwell Collins.
 </p>
 
 <p>
-Andrew earned his PhD in Computer Science from the University of
-Minnesota in 2009 and continued his studies as a post-doc at INRIA Saclay
-as part of Parsifal group. In 2010, Andrew joined Rockwell Collins. He
-is currently working as part of the air vehicle team in DARPA's High
-Assurance Cyber Military Systems project (HACMS), focusing high-level
-structural and behavioral properties for unmanned air vehicles.
-</p>
+Andrew has a particular interest in developing tools for the
+application of formal methods. He created
+the <a href="http://abella-prover.org/">Abella theorem prover</a>, an
+interactive theorem prover based on lambda-tree syntax. He also
+created <a href="/tools/jkind.html">JKind</a>, an infinite-state model
+checker for safety properties. He has developed various other tools
+and languages that are in use both inside and outside of Rockwell
+Collins.
 
 <p>
-Andrew has a strong interest in developing tools for the application
-of formal methods. As part of his PhD thesis, Andrew created the
-<a href="http://abella-prover.org/">Abella theorem prover</a>, an
-interactive theorem prover based on lambda-tree syntax. At Rockwell
-Collins, Andrew developed
-<a href="/tools/jkind.html">JKind</a>, an infinite-state model checker
-for safety properties. JKind is used for various internal and
-external projects at Rockwell Collins. Most recently, Andrew developed
-the <a href="/tools/resolute.html">Resolute</a> language and tool for
-architecturally-structured assurance cases.
-</p>
-
-<p>
-His interests include theorem proving, model checking, language
-translation, and software design.
+Andrew's broader interests include theorem proving, model checking,
+language translation, software design, operating systems, and embedded
+systems.
 </p>
