Added tools poster.

--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -24,10 +24,15 @@ archive: no
 <li>Formally verified operating system software</li>
 <li>High-assurance control components based on formal design languages and synthesis</li>
 </ul>
+
+<div id="project-tools">
+<A href="/images/SMACCM-tools.pdf"><img src="/images/SMACCM-tools.pdf" /></A>
+</div>
+
 <p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html"> Resolute</A>).
 </p>
 
-<p>At the end of our first phase, the HACMS Red Team was given six weeks and full access to the research vehicle source code and was unable to remotely hack the vehicle.   
+<p>At the end of each phase of the project, the HACMS Red Team was given six weeks and full access to the source code for both vehicles to evaluate their cyber security claims.  They were unable to compromise the security either vehicle.   
 </p>
 
 <p>An overview of the project, with some bits of our Phase 2 demo on the SMACCMcopter:</p>
