--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -26,7 +26,7 @@ archive: no
 </ul>
 
 <div id="project-tools">
-<A href="../images/SMACCM-tools.pdf"><img src="../images/SMACCM-tools.pdf" /></A>
+<A href="/images/SMACCM-tools.pdf"><img src="/images/SMACCM-tools.png" /></A>
 </div>
 
 <p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html"> Resolute</A>).
