--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -25,7 +25,7 @@ archive: no
 <li>High-assurance control components based on formal design languages and synthesis</li>
 </ul>
 
-<div id="project-tools">
+<div style="float:right">
 <A href="/images/SMACCM-tools.pdf"><img src="/images/SMACCM-tools.png" /></A>
 </div>
 
