--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -18,6 +18,10 @@ archive: no
 
 <p>Rockwell Collins is leading the Secure Mathematically-Assured Composition of Control Models (SMACCM) project in the DARPA HACMS program. The SMACCM project is developing new tools for building UAV software that is provably secure against many classes of cyber attack.  Our goal is to provide not just security, but verifiable security; that is, system designs for which we can have confidence in and evidence of security.  We are developing system architecture models, software components for mission and control functions, and operating system software, all of which are mathematically analyzed to ensure key security properties.</p>
 
+<div style="float:right">
+<A href="/images/SMACCM-tools.pdf"><img src="/images/SMACCM-tools.png" /></A>
+</div>
+
 <p>Unique aspects our approach include: </p>
 <ul>
 <li>Integration of proof and software engineering</li>
@@ -25,12 +29,8 @@ archive: no
 <li>High-assurance control components based on formal design languages and synthesis</li>
 </ul>
 
-<div style="float:right">
-<A href="/images/SMACCM-tools.pdf"><img src="/images/SMACCM-tools.png" /></A>
-</div>
-
-<p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html"> Resolute</A>).
-</p>
+<p>We are prototyping these new technologies on a research quadcopter, and then transitioning them to Boeing's Unmanned Little Bird (ULB) helicopter to demonstrate their practicality and effectiveness.  Our integrated tools for architectural modeling, analysis, and synthesis (shown in the figure) make this approach practical and effective.
+These tools for secure software development and analysis are available for transition to other vehicle programs (<A href="//loonwerks.com/tools/agree.html"> AGREE</A> and <A href="//loonwerks.com/tools/resolute.html"> Resolute</A>).  </p>
 
 <p>At the end of each phase of the project, the HACMS Red Team was given six weeks and full access to the source code for both vehicles to evaluate their cyber security claims.  They were unable to compromise the security either vehicle.   
 </p>
