--- a/projects/hacms.html
+++ b/projects/hacms.html
@@ -1,7 +1,7 @@
 ---
 layout: project
 shortname: HACMS
-longname: High Assurance Cyber Military System
+longname: High Assurance Cyber Military Systems
 sort: 2012
 archive: no
 ---
