updated SpeAR NFM 2017 paper with actual author's version

--- a/publications/wagner2017nfm_spear.html
+++ b/publications/wagner2017nfm_spear.html
@@ -1,8 +1,9 @@
 ---
 layout: publication
-authors: [A. Fifarek, L. Wagner, J. Hoffman, B. Rodes, M. Aiello, J. Davis]
+authors: [A. Fifarek, L. Wagner, E. Hoffman, B. Rodes, M. Aiello, J. Davis]
 title: "SpeAR v2.0: Formalized Past LTL Specification and Analysis of Requirements"
 info: NASA Formal Methods Symposium, May 2017
+link: "/publications/pdf/wagner2017nfm_spear.pdf"
 date: 2017-05-16 00:00:00
 tools: [SpeAR]
 ---
