updated minor grammatical error

--- a/publications/wagner2017nfm_spear.html
+++ b/publications/wagner2017nfm_spear.html
@@ -12,7 +12,7 @@ This paper describes current progress on SpeAR, a novel tool
 for capturing and analyzing requirements in a domain specific language
 designed to read like natural language. Using SpeAR, system engineers
 capture requirements, environmental assumptions, and critical system
-properties using the formal semantics of Past LTL. SpeAR analyzes re-
-quirements for logical consistency and uses model checking to prove that
+properties using the formal semantics of Past LTL. SpeAR analyzes requirements 
+for logical consistency and uses model checking to prove that
 assumptions and requirements entail stated properties. These analyses
 build confidence in the correctness of the formally captured requirements.
