--- a/publications/wagner2017spin_simpal.html
+++ b/publications/wagner2017spin_simpal.html
@@ -2,8 +2,8 @@
 layout: publication
 authors: [L. Wagner, D. Greve, A. Gacek]
 title: "SIMPAL: A Compositional Reasoning Framework for Imperative Programs"
-info: SPIN'17
-link: 
+info: International SPIN Symposium on Model Checking of Software
+link: "/publications/pdf/wagner2017spin_simpal.pdf"
 date: 2017-07-13
 projects:
 ---
@@ -16,3 +16,4 @@ specifying preconditions, postconditions, and global variable interactions of pr
 SIMPAL translates Limp programs to an equivalent Lustre representationwhich can be passed to the JKind model checking tool
 to perform assume-guarantee reasoning, reachability, and viability analyses. The feedback from these analyses can be used to refine
 the program to ensure the software functions as intended.
+
