--- a/people/andrew-gacek.html
+++ b/people/andrew-gacek.html
@@ -17,17 +17,29 @@ In 2010, he joined Rockwell Collins.
 </p>
 
 <p>
-Andrew has a particular interest in developing tools for the
-application of formal methods. He created
-the <a href="http://abella-prover.org/">Abella theorem prover</a>, an
-interactive theorem prover based on lambda-tree syntax. He also
-created <a href="/tools/jkind.html">JKind</a>, an infinite-state model
-checker for safety properties. He has developed various other tools
-and languages that are in use both inside and outside of Rockwell
-Collins.
+Andrew's expertise is integrating new and exciting research topics
+into tools which put formal methods in the hands of real users. Andrew
+is the author of <a href="/tools/jkind.html">JKind</a>, an
+infinite-state model checker for safety properties. He advocates for
+the use of JKind which now underlies tools such
+as <a href="/tools/agree.html">AGREE</a>, <a href="/tools/spear.html">SpeAR</a>,
+and
+<a href="https://github.com/lgwagner/SIMPAL">SIMPAL</a>. In addition,
+JKind serves as a research platform to investigate topics such
+as <a href="/publications/gacek2015nfm.html">realizability</a>
+and <a href="/publications/ghassabani2016fse.html">inductive validity
+cores</a>. Andrew also created
+the <a href="http://abella-prover.org/">Abella theorem prover</a> and
+the <a href="/tools/resolute.html">Resolute</a> assurance case tool.
+</p>
 
 <p>
 Andrew's broader interests include theorem proving, model checking,
 language translation, software design, operating systems, and embedded
 systems.
 </p>
+
+<!--  LocalWords:  fullname Gacek minnesota INRIA Saclay SpeAR SIMPAL
+ -->
+<!--  LocalWords:  Abella
+ -->
