--- a/tools/jkind.html
+++ b/tools/jkind.html
@@ -1,7 +1,7 @@
 ---
 layout: tool
 toolname: JKind
-summary: An infinite-state model checker for safety properties in Lustre
+summary: An infinite-state model checker for safety properties
 sourcecode: "https://github.com/agacek/jkind"
 download: "https://github.com/agacek/jkind/releases"
 ---
