Fix errors in SoI

--- a/projects/soi.html
+++ b/projects/soi.html
@@ -3,9 +3,26 @@ layout: project
 shortname: SoI
 longname: Air Force Research Lab's Summer of Innovation
 sort: 2017
-archive: yes
+archive: no
 ---
 
-<p> During the summer of 2017 we participated in Air Force Research Lab¿s (AFRL) Summer of Innovation (SoI) program. The program leveraged AFRL¿s Unmanned System¿s Autonomy Services (UxAS) as a basis to create a truly modular, open, and verifiable in-house UAV autonomy architecture.  The program was Modeled after the ¿Google Summer of Code¿ program; it was a 14-week ¿innovation workshop¿ with a team of experts from academia, government, and industry working together in a facility located in downtown Dayton, OH.  The team of approximately 50 experts in Formal Methods and software design leveraged an open source version of UxAS and the AFRL AMASE simulation platform to develop formal evidence for the correctness of the platform. When it was discovered that the existing system did not meet certain requirements, the team augmented UxAS in order to prove that it functioned as intended. </p>
+<p> During the summer of 2017 we participated in Air Force Research
+Lab's (AFRL) Summer of Innovation (SoI) program. The program leveraged
+AFRL's Unmanned System's Autonomy Services (UxAS) as a basis to create
+a truly modular, open, and verifiable in-house UAV autonomy
+architecture. The program was Modeled after the 'Google Summer of
+Code' program; it was a 14-week 'innovation workshop' with a team of
+experts from academia, government, and industry working together in a
+facility located in downtown Dayton, OH. The team of approximately 50
+experts in Formal Methods and software design leveraged an open source
+version of UxAS and the AFRL AMASE simulation platform to develop
+formal evidence for the correctness of the platform. When it was
+discovered that the existing system did not meet certain requirements,
+the team augmented UxAS in order to prove that it functioned as
+intended. </p>
 
-<p> In this project we leveraged our AADL analysis tools (AGREE and Resolute) to reason about properties of the UxAS architecture. We also leveraged technologies developed under the HACMS project to re-architect UxAS in order to formally prove that it met certain safety guarantees.</p>
+<p> In this project we leveraged our AADL analysis tools (AGREE and
+Resolute) to reason about properties of the UxAS architecture. We also
+leveraged technologies developed under the HACMS project to
+re-architect UxAS in order to formally prove that it met certain
+safety guarantees.</p>
