adding sel4 + uxas slides to SOI page

--- a/projects/soi.html
+++ b/projects/soi.html
@@ -26,3 +26,7 @@ Resolute) to reason about properties of the UxAS architecture. We also
 leveraged technologies developed under the HACMS project to
 re-architect UxAS in order to formally prove that it met certain
 safety guarantees.</p>
+
+<p>Slides from talks at <a href="http://mys5.org">S5</a> 2017 describing our contributions can be found here: <br /><br />
+
+<a href="../publications/slides/S5_sel4_uxas.ppt">UxAS + seL4</a></p>
